fix: overflow

--- a/app/src/features/settings/components/GlobalSettings/components/BlockListSettings/blocklist.scss
+++ b/app/src/features/settings/components/GlobalSettings/components/BlockListSettings/blocklist.scss
@@ -2,6 +2,12 @@
   background: var(--requestly-color-surface-0);
   border-radius: 8px;
   padding: 16px;
+
+  .blocklist-domains-container {
+    max-height: 200px;
+    overflow-y: auto;
+  }
+
   .header-row {
     padding-bottom: 8px;
 
